--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "http://localhost:5222/api"
+      "proxyUrl": "http://dspx.eu/antea25/api"
     }
   ]
 }
